legacy/0.7/Plugins.md
# Plugins

Plugins allow you to augment Ractive with extra functionality. You can create your own plugins - the individual
plugin API pages under "Writing" and the [plugin template](https://github.com/RactiveJS/Plugin-template) to get started.

## {{{createLink 'Adaptors'}}}

* [Backbone](https://github.com/ractivejs/ractive-adaptors-backbone)
* [Bacon.js](http://ractivejs.github.io/ractive-adaptors-bacon/)
* [Modella](https://github.com/staygrimm/ractive-adaptors-modella) - contributed by [@staygrimm](https://github.com/staygrimm)
* [Promises](http://lluchs.github.io/Ractive-adaptors-Promise/) - contributed by [@lluchs](https://github.com/lluchs)
* [Promise-alt](https://github.com/rstacruz/ractive-promise-alt) - contributed by [@rstacruz](https://github.com/rstacruz)
* [RxJS](http://ractivejs.github.io/ractive-adaptors-rxjs/)
* [Ractive](https://github.com/rstacruz/ractive-ractive) (synchronise several Ractive instances) - contributed by [@rstacruz](https://github.com/rstacruz)
* [ss-ractive](https://github.com/arxpoetica/ss-ractive) (Ractive Template Engine wrapper for [SocketStream](https://github.com/socketstream/socketstream)) - by Robert Hall [@arxpoetica](https://github.com/arxpoetica)
* [Stapes](https://github.com/dwightjack/ractive-adaptors-stapes) - contributed by [@dwightjack](https://github.com/dwightjack)
* TODO: Object.observe

## {{{createLink 'Components'}}}

* [Ractive-Require](http://ractive-require.codecorico.com) contributed by the [CodeCorico team](https://github.com/codecorico)
* [CodeMirror](http://dagnelies.github.io/ractive-codemirror/)
* [Bootstrap](http://dagnelies.github.io/ractive-bootstrap/)
* [Datatable](https://github.com/JonDum/ractive-datatable)


## {{{createLink 'Decorators'}}}

* [Chosen](http://kalcifer.github.io/ractive-decorators-chosen/) - contributed by [@rahulcs](https://github.com/rahulcs) ([@kalcifer](https://github.com/kalcifer))
* [minmaxwidth](https://github.com/cfenzo/Ractive-decorators-minmaxwidth) - contributed by [@cfenzo](https://github.com/cfenzo)
* [Select2](http://prezent.github.io/ractive-decorators-select2/) - contributed by [@sandermarechal](https://github.com/sandermarechal) ([@Prezent](https://github.com/Prezent))
* [Sortable](http://ractivejs.github.io/Ractive-decorators-sortable/)
* [Tooltip](http://github.com/JonDum/ractive-tooltip)
* [spoilerBox](https://github.com/idis-fhws/ractive-decorators-spoilerBox) - contributed by [@idis-fhws](https://github.com/idis-fhws)


## {{{createLink 'Events'}}}

* [Drag and Drop (HTML5)](https://github.com/Nijikokun/ractive.drag.drop.js) - contributed by [@Nijikokun](https://github.com/Nijikokun)
* [Drag and Drop (non-HTML5)](https://github.com/smallhadroncollider/ractive.events.drag) - contributed by [@smallhadroncollider](https://github.com/smallhadroncollider)
* [Drag and Drop Sortable List](https://github.com/Nijikokun/ractive.sortable.js) - contributed by [@Nijikokun](https://github.com/Nijikokun)
* [Resize](https://github.com/smallhadroncollider/ractive.events.resize) - contributed by [@smallhadroncollider](https://github.com/smallhadroncollider)
* [Hover](http://ractivejs.github.io/ractive-events-hover)
* [Keys](http://ractivejs.github.io/ractive-events-keys)
* [Mousewheel](http://ractivejs.github.io/ractive-events-mousewheel)
* [Tap](http://ractivejs.github.io/ractive-events-tap)
* [Touch](https://github.com/rstacruz/ractive-touch) - contributed by [@rstacruz](https://github.com/rstacruz/)
* [Typing](https://github.com/svapreddy/ractive-events-typing) - contributed by [@svapreddy](https://github.com/svapreddy)
* [Viewport](https://github.com/svapreddy/ractive-event-viewport) - contributed by [@svapreddy](https://github.com/svapreddy)



## {{{createLink 'Transitions'}}}

* [Fade](http://ractivejs.github.io/ractive-transitions-fade)
* [Fly](http://ractivejs.github.io/ractive-transitions-fly)
* [Scale](https://github.com/1N50MN14/Ractive-transitions-scale) - contributed by [@1N50MN14](https://github.com/1N50MN14)
* [Slide](http://ractivejs.github.io/ractive-transitions-slide)
* [SlideHorizontal](https://github.com/zenflow/ractive-transitions-slidehorizontal) - contributed by [@zenflow](https://github.com/zenflow)
* [Typewriter](http://ractivejs.github.io/ractive-transitions-typewriter)

